output.loginPage = {
  visitPoint: "90%,95%",
  title: "login",
  linkRegister: "Daftar dulu",
  inputEmail: "Email",
  inputPassword: "Password",
  btnLogin: "LOGIN",
  linkForgotPassword: "Lupa Password?",
  assertSee: "Cari Karya atau Kreator",
};
