appId: com.karyakarsa
---
- runScript: ../env.js
- tapOn:
    point: 90%,95%
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: Email
- inputText: ${output.login.email}
- tapOn: Password
- inputText: ${output.login.password}
- tapOn:
    text: LOGIN
    index: 1
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: Cari Karya atau Kreator
